[Fix] backend: directory structure
